# test-repo

./: CMakeLists.txt
.github/workflows/: ci.yml
src/: my_math.c
test/: CMakeLists.txt  main.c
